Updated gallery and UI

--- a/gallery.html
+++ b/gallery.html
@@ -17,8 +17,10 @@
     <div class="container">
 
     <div id="gallery" class="gallery mt-4">
-        <a href="images/gallery/1.jpeg" data-lightbox="mygallery"><img src="images/gallery/1.small.jpg" alt="ganesh"></a>
-
+        <a href="images/gallery/shiva-parvati-small.jpg" data-lightbox="mygallery"><img src="images/gallery/shiva-parvati.jpeg" alt="Shiva-Parvati"></a>
+        <a href="images/gallery/wine-small.jpg" data-lightbox="mygallery"><img src="images/gallery/wine.jpeg" alt="wine"></a>
+        <a href="images/gallery/colorful-small.jpg" data-lightbox="mygallery"><img src="images/gallery/colorful.jpeg" alt="colorful-girl"></a>
+        
     </div>
 </div>
 </section>
